// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`{before,after}All + concurrent 1`] = `
"add_hook: beforeAll
add_hook: afterAll
add_test: one
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
hook_start: beforeAll
hook_success: beforeAll
concurrent_tests_start
test_start: one
test_started: one
test_fn_start: one
hello one
test_fn_failure: one
test_done: one
concurrent_tests_end
hook_start: afterAll
hook_success: afterAll
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`concurrent 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
add_test: three
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
concurrent_tests_start
test_start: one
test_start: two
test_start: three
test_started: one
test_started: two
test_started: three
test_fn_start: one
test_fn_start: two
test_fn_start: three
hello one
hello two
hello three
test_fn_failure: one
test_fn_success: two
test_fn_success: three
test_done: one
test_done: two
test_done: three
concurrent_tests_end
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`concurrent.each 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
add_test: three
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
concurrent_tests_start
test_start: one
test_start: two
test_start: three
test_started: one
test_started: two
test_started: three
test_fn_start: one
test_fn_start: two
test_fn_start: three
hello one
hello two
hello three
test_fn_success: one
test_fn_success: two
test_fn_success: three
test_done: one
test_done: two
test_done: three
concurrent_tests_end
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`describe + {before,after}All + concurrent 1`] = `
"start_describe_definition: describe
add_hook: beforeAll
add_hook: afterAll
add_test: one
add_test: two
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
hook_start: beforeAll
hook_success: beforeAll
concurrent_tests_start
test_start: one
test_start: two
test_started: one
test_started: two
test_fn_start: one
test_fn_start: two
test_fn_failure: one
test_fn_failure: two
test_done: one
test_done: two
concurrent_tests_end
hook_start: afterAll
hook_success: afterAll
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`describe + {before,after}All + concurrent multiple times 1`] = `
"start_describe_definition: describe1
add_hook: beforeAll
add_hook: afterAll
add_test: one
add_test: two
finish_describe_definition: describe1
start_describe_definition: describe2
add_hook: beforeAll
add_hook: afterAll
add_test: one
add_test: two
finish_describe_definition: describe2
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe1
hook_start: beforeAll
hook_success: beforeAll
concurrent_tests_start
test_start: one
test_start: two
test_started: one
test_started: two
test_fn_start: one
test_fn_start: two
test_fn_failure: one
test_fn_success: two
test_done: one
test_done: two
concurrent_tests_end
hook_start: afterAll
hook_success: afterAll
run_describe_finish: describe1
run_describe_start: describe2
hook_start: beforeAll
hook_success: beforeAll
concurrent_tests_start
test_start: one
test_start: two
test_started: one
test_started: two
test_fn_start: one
test_fn_start: two
test_fn_failure: one
test_fn_success: two
test_done: one
test_done: two
concurrent_tests_end
hook_start: afterAll
hook_success: afterAll
run_describe_finish: describe2
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`describe + concurrent & non concurrent 1`] = `
"start_describe_definition: describe
add_hook: beforeAll
add_hook: afterAll
add_test: one
add_test: two
add_test: three
add_test: four
add_test: five
add_test: six
add_test: seven
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
hook_start: beforeAll
hook_success: beforeAll
concurrent_tests_start
test_start: one
test_start: two
test_start: four
test_start: six
test_start: seven
test_started: one
test_started: two
test_started: four
test_started: six
test_started: seven
test_fn_start: one
test_fn_start: two
test_fn_start: four
test_fn_start: six
test_fn_start: seven
test_fn_success: one
test_fn_success: two
test_fn_success: four
test_fn_success: six
test_fn_success: seven
test_done: one
test_done: two
test_done: four
test_done: six
test_done: seven
concurrent_tests_end
test_start: three
test_started: three
test_fn_start: three
test_fn_success: three
test_done: three
test_start: five
test_started: five
test_fn_start: five
test_fn_success: five
test_done: five
hook_start: afterAll
hook_success: afterAll
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`describe.skip + concurrent 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
add_test: three
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
concurrent_tests_start
test_start: one
test_start: two
test_start: three
test_skip
test_skip
test_skip
concurrent_tests_end
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`describe.skip + concurrent.each 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
add_test: three
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
concurrent_tests_start
test_start: one
test_start: two
test_start: three
test_skip
test_skip
test_skip
concurrent_tests_end
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`failures 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
test_started: one
hook_start: beforeEach
hook_success: beforeEach
test_fn_start: one
test_fn_failure: one
hook_start: afterEach
hook_failure: afterEach
test_done: one
test_start: two
test_started: two
hook_start: beforeEach
hook_success: beforeEach
test_fn_start: two
test_fn_success: two
hook_start: afterEach
hook_failure: afterEach
test_done: two
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`function descriptors 1`] = `
"start_describe_definition: describer
add_test: One
finish_describe_definition: describer
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describer
test_start: One
test_started: One
test_fn_start: One
test_fn_success: One
test_done: One
run_describe_finish: describer
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`nested describe.skip + concurrent 1`] = `
"start_describe_definition: describe
start_describe_definition: nested
add_test: one
add_test: two
add_test: three
finish_describe_definition: nested
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
run_describe_start: nested
concurrent_tests_start
test_start: one
test_start: two
test_start: three
test_skip
test_skip
test_skip
concurrent_tests_end
run_describe_finish: nested
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;

exports[`simple test 1`] = `
"start_describe_definition: describe
add_hook: beforeEach
add_hook: afterEach
add_test: one
add_test: two
finish_describe_definition: describe
run_start
run_describe_start: ROOT_DESCRIBE_BLOCK
run_describe_start: describe
test_start: one
test_started: one
hook_start: beforeEach
hook_success: beforeEach
test_fn_start: one
test_fn_success: one
hook_start: afterEach
hook_success: afterEach
test_done: one
test_start: two
test_started: two
hook_start: beforeEach
hook_success: beforeEach
test_fn_start: two
test_fn_success: two
hook_start: afterEach
hook_success: afterEach
test_done: two
run_describe_finish: describe
run_describe_finish: ROOT_DESCRIBE_BLOCK
run_finish

unhandledErrors: 0"
`;
